--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -732,6 +732,56 @@ urldate = {20/07/2015}
   publisher={Elsevier}
 }
 
+@article{jones2014scipy,
+  title={$\{$SciPy$\}$: Open source scientific tools for $\{$Python$\}$},
+  author={Jones, Eric and Oliphant, Travis and Peterson, Pearu},
+  year={2014}
+}
+
+@article{nelder1965simplex,
+  title={A simplex method for function minimization},
+  author={Nelder, John A and Mead, Roger},
+  journal={The computer journal},
+  volume={7},
+  number={4},
+  pages={308--313},
+  year={1965},
+  publisher={Br Computer Soc}
+}
+
+@article{wright1996direct,
+  title={Direct search methods: Once scorned, now respectable},
+  author={Wright, Margaret H},
+  journal={Pitman Research Notes in Mathematics Series},
+  pages={191--208},
+  year={1996},
+  publisher={LONGMAN SCIENTIFIC \& TECHNICAL}
+}
+
+
+@article{wright2010nelder,
+  title={Nelder, Mead, and the other simplex method},
+  author={Wright, Margaret H},
+  journal={Documenta Mathematica},
+  volume={7},
+  year={2010}
+}
+
+@article{nocedal2006numerical,
+  title={Numerical Optimization 2nd},
+  author={Nocedal, Jorge and Wright, Stephen J},
+  year={2006},
+  publisher={Springer}
+}
+
+@book{kraft1988software,
+  title={A software package for sequential quadratic programming},
+  author={Kraft, Dieter and others},
+  year={1988},
+  publisher={DFVLR Obersfaffeuhofen, Germany}
+}
+
+
 @misc{balay2012petsc,
   title={PETSc Web page, 2012},
   author={Balay, Satish and Brown, Jed and Buschelman, Kris and Gropp, William D and Kaushik, Dinesh and Knepley, Matthew G and McInnes, Lois Curfman and Smith, Barry F and Zhang, Hong},
