--- a/manuscrit_G_LEFEBVRE/intro.tex
+++ b/manuscrit_G_LEFEBVRE/intro.tex
@@ -133,6 +133,6 @@ La robustesse du critère vis-à-vis de la paramétrisation choisie pour la synt
 Ce critère montrera notamment les limites du modèle EDP en terme de reproduction de l'\hetero tumorale.
 
 \paragraph{}
-Enfin diverses annexes viendront compléter les discussions menées au cours de ce manuscrit. En particulier j'attire l'attention sur l'annexe~\ref{chap:anx_img_complement} qui présente notamment, en images, l'ensemble des données cliniques dont nous disposons pour les deux patients, données qui ont toutes été acquises sur la même machine. 
+Enfin diverses annexes viendront compléter les discussions menées au cours de ce manuscrit. En particulier, j'attire l'attention sur l'annexe~\ref{chap:anx_img_complement} qui présente notamment, en images, l'ensemble des données cliniques dont nous disposons pour les deux patients, données qui ont toutes été acquises sur la même machine. 
 
 \end{document}
